--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
       href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
       rel="stylesheet"
     />
-
+    <meta name="p:domain_verify" content="3b69f6d25f1e3c54a07c0d71ff867965" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="My name is Puvistyne Rajasegar. I’m a graduate of 2023 from University of Gustave Eiffel in France with a degree in Computer Engineering. I'm most passionate about giving back to the community, and my goal is to pursue this passion within the field of software engineering. In my free time I like working on open source projects."
+      content="My name is Puvistyne Rajasegar. I'm a graduate of 2023 from University of Gustave Eiffel in France with a degree in Computer Engineering. I'm most passionate about giving back to the community, and my goal is to pursue this passion within the field of software engineering. In my free time I like working on open source projects."
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
@@ -44,7 +44,7 @@
       The build step will place the bundled scripts into the <body> tag.
 
       To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
+      To create a production build, use `npm run build` or `yarn build`.
     -->
   </body>
 </html>
